# dphon

./: .coveragerc  .gitignore  .pyup.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  char_test.html  ci-requirements.txt  dev-requirements.txt  interface.html  pyproject.toml  pytest.ini  requirements.txt  setup.py  stats.csv  test.py  test_spacy.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  test.yml  unittest.yml
code/: analyze_sound.py  file_handling.py  main.py  markup.py
data/: bs_dict.json  dummy_initgroup_dict.json
docs/: align.html  cli.html  console.html  corpus.html  extend.html  g2p.html  index.html  index.m.html  match.html  ngrams.html  reuse.html
docs/dphon/: align.html  cli.html  console.html  extend.html  fmt.html  index.html  index.m.html  io.html  match.html  ngrams.html  phonemes.html  reuse.html
dphon/: __init__.py  align.py  aligner.py  cli.py  commands.py  console.py  corpus.py  document.py  extend.py  extender.py  filter.py  fmt.py  g2p.py  graph.py  index.py  io.py  lib.py  loader.py  match.py  matcher.py  ngrams.py  phonemes.py  reuse.py  tokenizer.py  util.py
dphon/data/: BaxterSagartOC_parsed.csv  BaxterSagartOC_parsed.txt  MCHomophoneHeads.txt  gentable_zhuyin.py  oc-consonants.txt  oc-vowels.txt  schuessler_dict.json  sound_table.json  sound_table.txt  sound_table_v1.json  sound_table_zhuyin.json  sound_table_zhuyin.txt  sound_table_zhuyin_comments.txt  tokenize_zhuyin.py
src/dphon/: align.py  cli.py  console.py  corpus.py  fuzzyphon.py  g2p.py  index.py  match.py  reuse.py
src/dphon/data/: rhyme-categories.txt
test/: debug.py  debug_multi.py  test_cli.py  test_multi.py
test/fixtures/: mwd_laozi.txt
test/fixtures/krp/: KR1b0001_001.txt  KR1e0001_002.txt  KR1e0001_003.txt  KR1e0001_009.txt  KR1e0001_011.txt  KR2a0001_203.txt  KR2a0001_207.txt
test/fixtures/郭店/: 老子丙.txt
tests/: bench.py  ddj.txt  debug.py  gd_laoziA.txt  test_cli.py  test_commands.py  test_graph.py  test_lib.py  test_multi.py  test_util.py
tests/fixtures/: lunhung_misc.txt  xiaojing.txt  xiaojing_misc.txt
tests/fixtures/krp/: KR1a0001_001.txt  KR1c0001_001.txt  KR1e0001_001.txt  KR1e0001_004.txt  KR1e0001_005.txt  KR1e0001_006.txt  KR1e0001_007.txt  KR1e0001_008.txt  KR1e0001_010.txt  KR1e0001_012.txt  KR2a0001_100.txt  KR2a0001_201.txt  KR2a0001_202.txt  KR2a0001_204.txt  KR2a0001_205.txt  KR2a0001_206.txt  KR2a0001_208.txt  KR2a0001_209.txt  KR2a0001_210.txt  KR2a0001_300.txt  KR2a0001_400.txt  KR2a0001_500.txt
tests/fixtures/laozi/: tiny.txt
tests/fixtures/wenzi/: guanzi_14.txt  hanfeizi_11.txt  shuoyuan_16_8b.txt  wenzi_1_1a-3b.txt
tests/fixtures/诗经/: 周南.txt  鹿鳴之什.txt
tests/fixtures/道德經/: 老子.txt
tests/integration/: test_cli.py  test_graph.py  test_multi.py  test_wenzi.py
tests/unit/: test_align.py  test_aligner.py  test_cli.py  test_console.py  test_corpus.py  test_extend.py  test_extender.py  test_fmt.py  test_g2p.py  test_index.py  test_io.py  test_match.py  test_ngrams.py  test_phonemes.py  test_reuse.py  test_util.py
(+3 files in other folders)
