[project]
name = "dphon"
version = "2.1.0"
description = "Tools and algorithms for phonology-aware Early Chinese NLP."
readme = "README.md"
requires-python = ">=3.12.2"
license = { file = "LICENSE" }
keywords = ["old chinese", "early chinese", "phonology", "linguistics", "nlp"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Chinese (Traditional)",
  "Operating System :: OS Independent",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Utilities",
]
authors = [
  { name = "Nick Budak", email = "budak@stanford.edu" },
  { name = "Gian Duri Rominger", email = "gromin@uw.edu" },
]
dependencies = [
  "docopt==0.6.2",
  "jsonlines==4.0.0",
  "levenshtein==0.27.1",
  "lingpy==2.6.13",
  "networkx>=2.5",
  "rich==14.1.0",
  "spacy>=3",
]

[dependency-groups]
dev = [
  "coverage>=7.14.0",
  "pdoc3>=0.11.6",
  "ruff>=0.15.13",
]

[project.urls]
Repository = "https://github.com/direct-phonology/dphon"
Issues = "https://github.com/direct-phonology/dphon/issues"
Documentation = "https://direct-phonology.github.io/dphon/"
